--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <input
                     type="number"
                     class="form-control"
-                    id="Interest"
+                    id="interest"
                     placeholder="Interest"
                   />
                 </div>
