--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       crossorigin="anonymous"
     />
 
+    <style>
+      #loading,
+      #results {
+        display: none;
+      }
+    </style>
+
     <!-- Bootstrap CSS
     <link
       rel="stylesheet"
@@ -72,9 +79,9 @@
               </div>
             </form>
             <!-- LOADER HERE -->
-            <!-- <div id="loading">
+            <div id="loading">
               <img src="img/loading.gif" alt="" />
-            </div> -->
+            </div>
 
             <!-- RESULTS -->
             <div id="results" class="pt-4">
